--- a/index.html
+++ b/index.html
@@ -6,65 +6,72 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <!-- Favicon -->
-    <link rel="shortcut icon" type="image/jpg" href="https://upload.wikimedia.org/wikipedia/commons/thumb/6/60/Dolphin-logo.svg/1200px-Dolphin-logo.svg.png">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <title> Revou Fundamental Course </title>
 </head>
 <body>
-    <header>
-        <div class="navbar" id="home">
-            <a href="index.html"><img src="https://storage.googleapis.com/danacita-website-v3-prd/website_v3/images/Logo-RevoU-5_1.original.png" alt="Revou"></img></a>
-            <div class="navbar-nav">
-                <nav>
-                    <ul>
-                        <li> <a href="#home"> Home </a> </li>
-                        <li> <a href="#calc"> Calculator </a></li>
-                    </ul>
-                </nav>
-            </div>
+    <header id="home">  
+        <div class="container">
+            <a href="index.html"> <img src="https://storage.googleapis.com/danacita-website-v3-prd/website_v3/images/Logo-RevoU-5_1.original.png" alt="Revou-Logo"/></a>
+            <nav>
+                <ul>
+                    <li><a href="#home"> Home </a></li>
+                    <li><a href="#menu"> Menu </a></li>
+                </ul>
+            </nav>
         </div>
     </header>
 
-    <section class="container">
-        <div class="content">
-            <h1> Revou Fundamental Course</h1>
-            <p> Halo Semuanya! <br>
-                Selamat Datang Di Websiteku. <br>
-                Disini Kalian Bisa Hitung Luas dan Keliling Persegi. <br>
-                Website Ini Dibuat Untuk Assessment Revou.
-            </p>
-        </div>
-    </section>
+    <main>
 
-    <section class="container-calc" id="calc">
-        <div class="calc-title">
-            <h1> Calculator </h1>
-        </div>
-        <div class="calc-content" id="results">
-            <div class="ls-content content">
-                <h1> Hitung Luas </h1>
-                <input type="number" id="txt-ls" placeholder="Masukkan Angka Disini...">
-                <button id="btn-ls"> Hitung </button>
-                <div class="row ls" id="results-ls">
+        <section class="hero" alt="Photo by Kelly Sikkema on Unsplash">
+            <div class="container">
+                <h1 class="ubuntu-bold"> Selamat datang di Website Saya. </h1>
+                <p class="ubuntu-regular"> Menawarkan layanan terbaik untuk Anda. </p>
+                <a href="#menu" class="btn"> Lihat Layanan Kami. </a>
+            </div>
+        </section>
+
+        <section class="services" id="menu">
+            <div class="container">
+                <h2 class="ubuntu-bold"> Layanan Kami. </h2>
+                <div class="grid-container">
+                    <article class="grid-item">
+                        <h3 class="ubuntu-medium"> Kalkulator Persegi. </h3>
+                        <p class="ubuntu-reguler"> Layanan ini untuk menghitung Luas dan Keliling. </p>
+                        <label for="choose-p"> Pilih Perhitungan : </label>
+                        <select id="choose-p">
+                            <option value="choosep-p"> -- Pilih -- </option>
+                            <option value="luasp"> -- Luas -- </option>
+                            <option value="kelilingp"> -- Keliling -- </option>
+                        </select>
+                        <div class="row" id="content-p">
+                        </div>
+                    </article>
+                    <article class="grid-item">
+                        <h3 class="ubuntu-medium"> Kalkulator Persegi. </h3>
+                        <p class="ubuntu-reguler"> Layanan ini untuk menghitung Luas dan Keliling. </p>
+                        <label for="choose-pp"> Pilih Perhitungan : </label>
+                        <select id="choose-pp">
+                            <option value="choosepp-pp"> -- Pilih -- </option>
+                            <option value="luaspp"> -- Luas -- </option>
+                            <option value="kelilingpp"> -- Keliling -- </option>
+                        </select>
+                        <div class="row" id="content-pp">
+                        </div>
+                    </article>
                 </div>
             </div>
-            <div class="kl-content content">
-                <h1> Hitung Keliling </h1>
-                <input type="number" id="txt-kl" placeholder="Masukkan Angka Disini...">
-                <button id="btn-kl"> Hitung </button>
-                <div class="row kl" id="results-kl">
-                </div>
-            </div>
+        </section>
 
-        </div>
-    </section>
+    </main>
 
     <footer>
         <a href="#home"> Home </a>
-        <p> Copyright @2025 Jeremi Salvatores</p>
+        <p class="ubuntu-medium"> Copyright @2025 Jeremi Salvatores </p>
     </footer>
+
 
 <script src="js/script.js"></script>
 </body>
