--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         </div>
                     </article>
                     <article class="grid-item">
-                        <h3 class="ubuntu-medium"> Kalkulator Persegi. </h3>
+                        <h3 class="ubuntu-medium"> Kalkulator Persegi Panjang. </h3>
                         <p class="ubuntu-reguler"> Layanan ini untuk menghitung Luas dan Keliling. </p>
                         <label for="choose-pp"> Pilih Perhitungan : </label>
                         <select id="choose-pp">
